--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,11 @@
         android:id="@+id/textView3"
         android:layout_width="363dp"
         android:layout_height="20dp"
-        android:text="Name________________________"
+        android:layout_marginTop="11dp"
+        android:hint="Name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="567dp" />
+        app:layout_constraintTop_toBottomOf="@+id/rabbidVideo" />
 
     <TextView
         android:id="@+id/textView"
@@ -32,18 +33,17 @@
         android:id="@+id/rabbidVideo"
         android:layout_width="413dp"
         android:layout_height="412dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.005"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/babyImage"
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/babyImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="92dp"
+        android:layout_height="85dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,8 @@
         android:id="@+id/appbar"
 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="parent">
 
     </com.google.android.material.appbar.AppBarLayout>
 
